Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -242,8 +242,13 @@
 
     <!-- Research Interests: white card -->
     <div class="section white-card">
-      <h2>Research Interests</h2>
-      I am studying earthquake source physics and applications of machine learning techniques to geophysical problems. My current research interests are the followings.
+      <h2>Research Interests and bakgrounds</h2>
+
+      <p>
+        I am studying earthquake source physics and applications of machine learning techniques to 
+        geophysical problems. My current research interests are the followings.
+      </p>
+
       <ul>
         <li>Multi-scale earthquake source property.</li>
         <li>Representation and scale-dependence of fault constitutive law.</li>
@@ -252,6 +257,14 @@
         <li>Numerical simulation and modeling of dynamic earthquake sequences.</li>
         <li>Machine learning for physics-based earthquake prediction.</li>
       </ul>
+      
+      <p>
+        In my master's program, I work with the projects about multi-scale fault constitutive law with 
+        <b>Prof. Hiroyuki Noda</b>, and about synthetic (numerical or laboraotry) earthquake prediction using machine learning 
+        with <b>Prof. Yoshihiro Kaneko</b> and <b>Prof. Bertrand Rouet-Leduc</b>.
+        
+      </p>
+
     </div>
 
     <!-- Publications: white card -->
