Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
         In my master's program, I work with the projects about multi-scale fault constitutive law with 
         <b>Prof. Hiroyuki Noda</b>, and about synthetic (numerical or laboraotry) earthquake prediction using machine learning 
         with <b>Prof. Yoshihiro Kaneko</b> and <b>Prof. Bertrand Rouet-Leduc</b>.
-        
+        I am developing numerical simulation of dynamic earthquake sequence by spectral boundary intergral equation method,
+        and various machine learning-based method for synthetic earthquake prediction.
       </p>
 
     </div>
@@ -300,12 +301,12 @@
 
           <li>
             M.Sc. in Geophysics, Kyoto University  
-            <br><span style="color:#333;">2023–present</span>
+            <br><span style="color:#333;">2024-present</span>
           </li>
 
           <li>
-            B.Sc. in Earth and Planetary Sciences, Kyoto University  
-            <br><span style="color:#333;">2019–2023</span>
+            B.Sc. in Geophysics, Kyoto University  
+            <br><span style="color:#333;">2020-2024</span>
           </li>
 
         </ul>
@@ -354,7 +355,7 @@
   </script>
 
   <footer class="footer">
-    <p>© 2025 Reiju Norisugi</p>
+    <p>© 2025 Reiju Norisugi Last updated:20251116</p>
     <p>
       This website is licensed under
       <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">
