--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600&display=swap">
+
 
   <style>
     body {
       margin: 0;
       background: #000010;
-      font-family: "Inter", sans-serif;
+      font-family: "Noto Sans", sans-serif;
       color: #e6e6e6;
       padding: 40px 0;
     }
