Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
       margin-bottom: 45px;
       border: 1px solid #ccc;
     }
+    
+    .white-card p {
+      font-size: 1.05rem;
+      line-height: 1.7;
+      margin-bottom: 18px;
+    }
+
+    .white-card ul {
+      margin-top: 16px;
+      margin-bottom: 22px;
+      padding-left: 26px;
+    }
+
+    .white-card ul li {
+      font-size: 1.03rem;
+      line-height: 1.65;
+      margin-bottom: 10px;
+    }
 
     /* For link in white card */
     .white-card a {
@@ -264,6 +282,9 @@
         In my master's program, I work with the projects about multi-scale fault constitutive law with 
         <b>Prof. Hiroyuki Noda</b>, and about synthetic (numerical or laboraotry) earthquake prediction using machine learning 
         with <b>Prof. Yoshihiro Kaneko</b> and <b>Prof. Bertrand Rouet-Leduc</b>.
+      </p>
+
+      <p>
         I am developing numerical simulation of dynamic earthquake sequence by spectral boundary intergral equation method,
         and various machine learning-based method for synthetic earthquake prediction.
       </p>
