Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       margin-bottom: 45px;
       border: 1px solid #ccc;
     }
-    
+
     .white-card p {
       font-size: 1.05rem;
       line-height: 1.7;
@@ -378,7 +378,7 @@
   </script>
 
   <footer class="footer">
-    <p>© 2025 Reiju Norisugi Last updated:20251116</p>
+    <p>© 2025 Reiju Norisugi &nbsp; Updated: 2025-11-16</p>
     <p>
       This website is licensed under
       <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">
