Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -209,6 +209,63 @@
     .footer a:hover {
       text-decoration: underline;
     }
+  
+  
+    /* Responsive tuning */
+    @media (max-width: 600px) {
+      body {
+        padding: 20px 10px;
+      }
+
+      .container {
+        width: 95%;
+      }
+
+      .card, .white-card {
+        padding: 20px 20px;
+        margin-bottom: 30px;
+      }
+
+      .photo {
+        width: 100px;
+        height: 100px;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+      }
+      h2 {
+        font-size: 1.2rem;
+      }
+
+      .white-card p, .white-card ul li, .edu-list li, .subtext {
+        font-size: 0.95rem;
+        line-height: 1.5;
+      }
+
+      .links a {
+        font-size: 0.95rem;
+        padding: 8px 12px;
+      }
+      .links {
+        gap: 8px;
+      }
+
+      .doi-list {
+        padding-left: 25px;
+      }
+
+      .edu-list {
+        padding-left: 18px;
+      }
+
+      .footer {
+        font-size: 0.85rem;
+        padding: 15px 5px;
+      }
+    }
+</style>
+
   </style>
 </head>
 <body>
