Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
     .fa-google { color: #FFC107; font-size: 1.4rem; }
     .fa-box { color: #a86cd3; font-size: 1.4rem; }
 
+    .card .links a:first-child {
+      margin-top: 8px;
+    }
+
     .section { margin-bottom: 40px; }
 
     h2 {
@@ -241,6 +245,10 @@
       .white-card p, .white-card ul li, .edu-list li, .subtext {
         font-size: 0.95rem;
         line-height: 1.5;
+      }
+
+      .card .links a:first-child {
+        margin-top: 6px;
       }
 
       .links a {
