Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       margin: 0 auto 20px auto;
       background-size: cover;
       background-position: center;
-      background-image: url("me.jpg");
+      background-image: url("me.pdf");
       border: 3px solid #333;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
     }
