Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -408,12 +408,15 @@
     <div class="section white-card">
       <h2 id="conf-toggle">Conferences ▼</h2>
       <div class="accordion-content" id="conf-list">
-        <ul class="edu-list">
+        <ul class="doi-list">
           <li>
             AGU Fall Meeting, San Francisco, USA, 2023
           </li>
           <li>
-            Japan Geoscience Union Meeting, Tokyo, Japan, 2022
+            THE ERC Tectonic Workshop, Roma, Italy, 2023
+          </li>
+          <li>
+            International Joint Workshop on Slow-to-Fast Earthquakes, Tokyo, Japan, 2023
           </li>
         </ul>
       </div>
