--- a/index.html
+++ b/index.html
@@ -408,7 +408,25 @@
     <div class="section white-card">
       <h2 id="conf-toggle">Conferences ▼</h2>
       <div class="accordion-content" id="conf-list">
-        <ul class="doi-list">
+        <ol class="doi-list">
+          <li>
+            AGU Fall Meeting, Washington D.C., USA, 2024
+          </li>
+          <li>
+            SSJ Fall Meeting, Nigata, Japan, 2024
+          </li>
+          <li>
+            International Workshop on Earthquakes 4th Edition, Cargèse, France, 2024
+          </li>
+          <li>
+            International Joint Workshop on Slow-to-Fast Earthquakes, Beppu, Japan, 2024
+          </li>
+          <li>
+            JpGU, Chiba, Japan, 2024
+          </li>
+          <li>
+            JpGU, Chiba, Japan, 2024
+          </li>
           <li>
             AGU Fall Meeting, San Francisco, USA, 2023
           </li>
@@ -418,7 +436,7 @@
           <li>
             International Joint Workshop on Slow-to-Fast Earthquakes, Tokyo, Japan, 2023
           </li>
-        </ul>
+        </ol>
       </div>
     </div>
 
