Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -425,13 +425,10 @@
             JpGU, Chiba, Japan, 2024
           </li>
           <li>
-            JpGU, Chiba, Japan, 2024
-          </li>
-          <li>
             AGU Fall Meeting, San Francisco, USA, 2023
           </li>
           <li>
-            THE ERC Tectonic Workshop, Roma, Italy, 2023
+            The ERC Tectonic Workshop, Roma, Italy, 2023
           </li>
           <li>
             International Joint Workshop on Slow-to-Fast Earthquakes, Tokyo, Japan, 2023
