Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     .fa-github { color: #ffffff; font-size: 1.4rem; }
     .fa-at { color: #66c8ff; font-size: 1.4rem; }
     .fa-google { color: #FFC107; font-size: 1.4rem; }
+    .fa-graduation-cap { color: #FFC107; font-size: 1.4rem; }
     .fa-box { color: #a86cd3; font-size: 1.4rem; }
 
     /* Add extra top margin for the first link */
@@ -328,7 +329,7 @@
         </a>
 
         <a href="https://scholar.google.com/citations?user=7JwUgzEAAAAJ&hl=ja" target="_blank">
-          <i class="fa-brands fa-google"></i>
+          <i class="fa-brands fa-graduation-cap"></i>
           Google Scholar
         </a>
 
