Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@
     .fa-github { color: #ffffff; font-size: 1.4rem; }
     .fa-at { color: #66c8ff; font-size: 1.4rem; }
     .fa-google { color: #FFC107; font-size: 1.4rem; }
-    .fa-graduation-cap { color: #FFC107; font-size: 1.4rem; }
     .fa-box { color: #a86cd3; font-size: 1.4rem; }
 
     /* Add extra top margin for the first link */
@@ -329,7 +328,7 @@
         </a>
 
         <a href="https://scholar.google.com/citations?user=7JwUgzEAAAAJ&hl=ja" target="_blank">
-          <i class="fa-brands fa-graduation-cap"></i>
+          <i class="fa-brands fa-google"></i>
           Google Scholar
         </a>
 
@@ -411,28 +410,28 @@
       <div class="accordion-content" id="conf-list">
         <ol class="doi-list">
           <li>
-            AGU Fall Meeting, Washington D.C., USA, 2024
-          </li>
-          <li>
-            SSJ Fall Meeting, Nigata, Japan, 2024
-          </li>
-          <li>
-            International Workshop on Earthquakes 4th Edition, Cargèse, France, 2024
-          </li>
-          <li>
-            International Joint Workshop on Slow-to-Fast Earthquakes, Beppu, Japan, 2024
-          </li>
-          <li>
-            JpGU, Chiba, Japan, 2024
-          </li>
-          <li>
-            AGU Fall Meeting, San Francisco, USA, 2023
+            International Joint Workshop on Slow-to-Fast Earthquakes, Tokyo, Japan, 2023
           </li>
           <li>
             The ERC Tectonic Workshop, Roma, Italy, 2023
           </li>
           <li>
-            International Joint Workshop on Slow-to-Fast Earthquakes, Tokyo, Japan, 2023
+            AGU Fall Meeting, San Francisco, USA, 2023
+          </li>
+          <li>
+            JpGU, Chiba, Japan, 2024
+          </li>
+          <li>
+            International Joint Workshop on Slow-to-Fast Earthquakes, Beppu, Japan, 2024
+          </li>
+          <li>
+            International Workshop on Earthquakes 4th Edition, Cargèse, France, 2024
+          </li>
+          <li>
+            SSJ Fall Meeting, Nigata, Japan, 2024
+          </li>
+          <li>
+            AGU Fall Meeting, Washington D.C., USA, 2024
           </li>
         </ol>
       </div>
