--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
             International Joint Workshop on Slow-to-Fast Earthquakes, Tokyo, Japan, 2023
           </li>
           <li>
-            The ERC Tectonic Workshop, Roma, Italy, 2023
+            The ERC Tectonic Workshop, Roma 2nd Edition, Italy, 2023
           </li>
           <li>
             AGU Fall Meeting, San Francisco, USA, 2023
@@ -432,6 +432,15 @@
           </li>
           <li>
             AGU Fall Meeting, Washington D.C., USA, 2024
+          </li>
+          <li>
+            JpGU, Chiba, Japan, 2025
+          </li>
+          <li>
+            The ERC Tectonic Workshop 3rd Edition, Roma, Italy, 2025
+          </li>
+          <li>
+            SSJ Fall Meeting, Fukuoka, Japan, 2025
           </li>
         </ol>
       </div>
