--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       margin: 0 auto 20px auto;
       background-size: cover;
       background-position: center;
-      background-image: url("me.pdf");
+      background-image: url("me.jpg");
       border: 3px solid #333;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
     }
@@ -441,6 +441,9 @@
           </li>
           <li>
             SSJ Fall Meeting, Fukuoka, Japan, 2025
+          </li>
+          <li>
+            12th ACES International Workshop, Taipei, Taiwan, 2025
           </li>
         </ol>
       </div>
