Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -283,8 +283,13 @@
         gap: 8px;
       }
 
+      .doi-list li::before {
+        left: -18px;
+        font-size: 0.9rem;
+      }
+
       .doi-list {
-        padding-left: 25px;
+        padding-left: 28px;
       }
 
       .edu-list {
@@ -410,40 +415,40 @@
       <div class="accordion-content" id="conf-list">
         <ol class="doi-list">
           <li>
-            International Joint Workshop on Slow-to-Fast Earthquakes, Tokyo, Japan, 2023
+            International Joint Workshop on Slow-to-Fast Earthquakes, Tokyo, Japan, 2023.
           </li>
           <li>
-            The ERC Tectonic Workshop, Roma 2nd Edition, Italy, 2023
+            The ERC Tectonic Workshop, Roma 2nd Edition, Italy, 2023.
           </li>
           <li>
-            AGU Fall Meeting, San Francisco, USA, 2023
+            AGU Fall Meeting, San Francisco, USA, 2023.
           </li>
           <li>
-            JpGU, Chiba, Japan, 2024
+            JpGU, Chiba, Japan, 2024.
           </li>
           <li>
-            International Joint Workshop on Slow-to-Fast Earthquakes, Beppu, Japan, 2024
+            International Joint Workshop on Slow-to-Fast Earthquakes, Beppu, Japan, 2024.
           </li>
           <li>
-            International Workshop on Earthquakes 4th Edition, Cargèse, France, 2024
+            International Workshop on Earthquakes 4th Edition, Cargèse, France, 2024.
           </li>
           <li>
-            SSJ Fall Meeting, Nigata, Japan, 2024
+            SSJ Fall Meeting, Nigata, Japan, 2024.
           </li>
           <li>
-            AGU Fall Meeting, Washington D.C., USA, 2024
+            AGU Fall Meeting, Washington D.C., USA, 2024.
           </li>
           <li>
-            JpGU, Chiba, Japan, 2025
+            JpGU, Chiba, Japan, 2025.
           </li>
           <li>
-            The ERC Tectonic Workshop 3rd Edition, Roma, Italy, 2025
+            The ERC Tectonic Workshop 3rd Edition, Roma, Italy, 2025.
           </li>
           <li>
-            SSJ Fall Meeting, Fukuoka, Japan, 2025
+            SSJ Fall Meeting, Fukuoka, Japan, 2025.
           </li>
           <li>
-            12th ACES International Workshop, Taipei, Taiwan, 2025
+            12th ACES International Workshop, Taipei, Taiwan, 2025.
           </li>
         </ol>
       </div>
